--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 						<h1>Prepa en línea SEP</h1><br/><br/>
 						<h1 style="font-size:65px">Fase final</h1><br/>
 						<h1 style="font-size:50px">Reserva especial para el cacomixtle, en la zona norte de la ciudad de México</h1>
-                        <h2>Alumna: Olimpia Teresa Guerrero Santoyo </h3>
-                        <h2>Desarrollador: Ing. Antonio de Jesús Gómez Guerrero </h3>  
+                        <h2>Alumna: Olimpia Teresa Guerrero Santoyo </h3>  
                         <h2>Asesor: Lic. Jesús Antonio Torres Topete </h3>
                         <h2>Grupo: M23C2G32-042</h3>
+                        <h2>Desarrollador de la plantilla: Ing. Antonio de Jesús Gómez Guerrero </h3>    
                         <br/><br/>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
