Corrección de ortografía
Cambio de CDXM por CDMX en la página de inicio.

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -127,7 +127,7 @@
 						</p><br/>
 						<div class="content_container_color">
 							<p>
-								El objetivo principal es hacer conciencia de que el cacomixtle es un animal inofensivo que es maltratado debido a que la carencia de su habitat natural lo obligó a adaptarse a la CDXM y en consecuencia es maltratado por la gente de la ciudad.
+								El objetivo principal es hacer conciencia de que el cacomixtle es un animal inofensivo que es maltratado debido a que la carencia de su habitat natural lo obligó a adaptarse a la CDMX y en consecuencia es maltratado por la gente de la ciudad.
       
 							</p>
 						</div>
