Cambio de referencia
Cambio de "ir a tecnologías" a "Ir a reflexión"

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -90,7 +90,7 @@
 								Reflexión acerca del desarrollo de tu proyecto: lo que más se te dificultó y tus logros.
 							</p>
 							<div class="button_small">
-								<a href="tecnologias.html">Ir a tecnologías</a>
+								<a href="tecnologias.html">Ir a reflexión</a>
 							</div>
 						</div> 
 					</div>
